<resources>
    <string name="app_name">Survivor</string>
    <string name="select_the_type_of_survival">Select the type of survival:</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="good_luck_you_can_survive">Good luck you can survive</string>
    <string name="Win">You can start celebrating your second birthday. I (mr.survivor) congratulate you!!!</string>
    <string name="Finish">Quit application</string>
    <string name="Long_survival">Start Long survival</string>
    <string name="Emergency_survival">Start Emergency survival</string>
    <string name="Nothing"></string>
    <string name="WILS">Long survival is a type of survival in which you have more time to survive and you are interested in resources for survival and a place of salvation. Example: forest survival, epidemic,flood.</string>
    <string name="WIES">Emergency survival is a type of survival in which you do not have much time to survive and you are not interested in resources just the right behavior to increase the chances of survival. Examples: plane crash, terrorists takeover, shipwreck.</string>
    <string name="Spinner_Emergency">EMERGENCY SURVIVAL SCENARIOS:</string>
    <string name="Spinner_Long">LONG SURVIVAL SCENARIOS:</string>
    <string name="mr_survivor_hello">Hi! I am your assistant mr.survivor. I will help you survive in the most difficult situations. Good luck to you!!!</string>
    <string name="PANIC">PLEASE REMEMBER THE MAIN THING DO NOT PANIC!!!</string>
    <string name="button_start">START SURVIVAL</string>
    <string name="button_finish">I SURVIVED</string>
    <string name="Forest_survival_scenario_info">1)Do not panic : if you get lost. Panic is much more dangerous than anything else, because it overshadows the mind, which is the only best, most useful and universal means of salvation. At the moment when you realize that you are lost, stop. Take a deep breath and keep calm.
2)Stay in one place: This not only increases your chances of being found, but also saves the energy of your body due to the smaller consumption of water and food that you need to maintain it. Squat down and stay in place. There is a possibility that you have already started to search, especially if you have informed someone about your plans. In addition, if you are with someone else, do not separate. Your strength in quantity.
If it is sunny, try searching in the shadows - this will reduce the risk of dehydration and burns. Do not be tempted to take off your clothes, because, on the contrary, it will increase this risk.
3)Make a fire: Build a place for a fire, throwing enough coal to be warm for several hours, and make sure that you have a lot of firewood. Make a fire before you need it, even if it is warm in the forest. It is better to make a fire in a calm, not panic state, when the sun sets. Not to mention the fact that you will feel in comfort and safety, being near the fire, which determines your location.
According to the excellent practical method, you need to collect wood, until you are sure that you have enough for the night. Then collect three more identical heaps of wood, which may be enough for the night.
You must get the brushwood from the undergrowth under the forest canopy. You can also use bark or dry litter. If your fire is not warm enough, throw fresh branches, bushes or woody bitches into it so that the smoke that is generated serves as a fire signal.
The best campfire wood is dead. You can pull it away from a healthy tree. Regardless of what type of forest you are in, there is dry brushwood everywhere.
Remember: a small fire is easier to maintain than a large one, if only because it requires less fuel. When you have enough glowing coals, keep the fire at a moderate size, so you will not need to spend time searching for fuel.
Do not make fire in dangerous places. Your fire should be far from flammable trees and shrubs, preferably at all in a clearing. Be careful with fire. When you want to throw fuel into it, do not overdo it. Consider the weather and other factors, and also remember that to escape from a forest fire is much more difficult than getting out of the forest when you get lost!
4)Mark your location: Whistle, scream, sing or knock stones, creating noise. If possible, highlight your location so that it can be seen from above. If you are in a mountain meadow, place three piles of dark leaves and triangle-shaped branches. In the sandy terrain, make a triangle on the sand. Such a triangle in the wild is considered a standard distress signal.
You can use a fire to send a distress call. A universal distress signal is a straight line of three fires or three fires forming a triangle.
You can also give three whistles, or make three shots in the air with a gun, if you have one, or give a signal three times with a mirror, catching the sun rays.
5)Scout your site: Although you cannot go too far, you should explore the surrounding areas to find something useful. You may find things left by someone, be it a tin can or a pocket lighter, which can be useful for signaling. Make sure that you can always find your way to your “zero point” while you are looking for water, shelter or the way home.
6)Find a good source of water: In a situation of survival, you can stretch for three days without water, but by the end of the second day you will lose shape, so you need to quickly find a reservoir. The best source of water is a spring, but the chances of finding it are small. Also pay attention to the birds, because they often fly over fresh waters. Drink the rest of the water, but in portions, but not all at once.
Running creek is also an excellent option. The flow of water reduces sediment. Keep in mind that streamed water can be dangerous due to the presence of pathogenic bacteria. But when there is a question of life or death, the risk of getting sick should be relegated to the background, because then they will cure you.
If you are desperate, and there is dew on the grass, gather it in clothes and then suck the moisture out of the fabric.
You can also search for water in the crevices of the rock.
7)Find or make cover:  Without a proper shelter, you will be unprotected from atmospheric conditions, being exposed to hypothermia or heatstroke, depending on the weather. If you are not dressed according to the conditions, you need to find shelter. Fortunately, there are plenty of tools and resources in the forest to build a fire and build a shelter (for warmth, safety and signals). Below is a list of things you can use:
Look for a fallen or rickety tree. You can build an A-shaped shelter by laying branches on both sides of a fallen tree, and then cover it with shrubs, frond, leaves or other plants.
Use shrubs and fresh branches with leaves to protect the shelter from water, wind, and snow, as well as shading. Lock yourself in your shelter from all possible sides.
The cave can be a great shelter, but you need to check whether it is not occupied by bears, large cats, snakes or other animals. Undoubtedly, they know that the caves are a great refuge, as they are in constant search, unlike you.
If it snows, make snow shelter. Snow is an excellent material in which you will be comfortable.
Make sure your accommodation is not too hidden, otherwise you will spend all your time in it and no one will find you.
Do not waste all your strength on building the perfect cover, otherwise you will exhaust yourself.</string>
    <string name="Forest_survival_scenario_eat">In the case of the origin of proteins and fat, it can be made for water in the form of a young child, on the basis of the roots of the tree. Over feeding nutritious kor be faithful, when the trees are filled with juices. It is also suitable for settling in summer and autumn. This blessing still calls for a copy, which can be installed by a computer, and the next one: Then, by any other subject, you need to remove the upper bark.
Oddly enough, the easiest food to be found in the forest is under the feet of a tourist - these are ordinary earthworms. To get them from under the top layer of soil, it is enough to use a regular stick. They need to be washed in water, so that the whole digested earth comes out of the worms, then consumed raw or boiled. Organic protein food is ready.

Another type of food are frogs. If you remove the skin from them and fry, you get an analogue of chicken meat. Grasshoppers, lizards, non-venomous snakes are also excellent food. You can also get mice and other small rodents. Make it harder than worms and frogs, but possible. If you managed to find a reservoir in the forest, water lilies can grow there. This is a great success, because the water lily contains starch in its rhizome, protein and sugar - and this is almost the usual bread for everyone. For eating, you need to grind the plant, dry and grind into flour. After that, it can be made into soup-soup or used for baking. In addition to the water lily, you can use crushed acorns, rhizome of rhiza (similar to reeds), as well as dandelion roots as flour.
First, they also need to be dried, soaked twice and dried again, and then grind into flour, from which you will get something like porridge. Rhizo rhizome can not soak, but simply cut and dried, then cook. If the rogoza pieces are fried, you get a drink, vaguely reminiscent of coffee. You can find mushrooms. It can be tree mushrooms growing on trunks, or fallen trees, oyster mushrooms. It is easy to notice them due to the lack of vegetation. Tree fungus, - chaga, besides, has strong therapeutic properties, high biological activity. Winter shade grows throughout the winter, with a bright orange cap it is easy to see in the snow. You can find it on aspen, winter mushrooms grow in groups. In addition to winter garbage, in winter also false garlic grows, it is also suitable for food.
    </string>
    <string name="Forest_survival_scenario_navigation">1) Definition of the cardinal points of the tree bark:

The bark of the trees is usually rougher and darker on the north side. In particular, it is clearly visible on such trees as: birch, pine, larch, aspen

Caution! In order to more accurately determine the direction of the world, use several trees.

After the rain has passed the pine trunks are usually darker on the north side (turn black on the north side). This is due to the fact that the pine crust has a secondary crust that grows faster on the north side.
2) Wood fungi most often appear on the north side of the tree, especially in the dry season.

3) Orientation on the anthill:

Almost always, ants arrange their anthills on the south side of the tree. In addition, on the south side, the ant hills are more gentle

4) Orientation with animals:

Migratory birds fly north in the spring and south in the autumn.

5) Orientation on the mountain slopes:

The southern slopes are usually drier than the northern ones, less grass (sod), more susceptible to destruction

6) Orientation by stars:
This is a very effective type of orientation. The main thing is to find the northern star in the sky (it is not as bright as many people think), it is easy to find it if you know what the constellation of the big bear looks like.
We find seven stars of the Big Dipper constellation, which resembles a bucket with a handle. Then mentally connect two stars with a straight line that are on the edge of the bucket. After that, continue the line to the extreme star on the “handle” of the Ursa Minor constellation. This star will be polar (always pointing strictly north)</string>
    <string name="Choose">CHOOSE</string>
</resources>